Fix buttons on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
 #root {
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
+  width: 100%;
   text-align: center;
 }
 
